# agentic-ai-cli

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
.github/workflows/: agent-ci.yml  agent-deploy.yml
app/: __init__.py  asyncio_compat.py  config_loader.py  job_logging.py  main.py  mcp_loader.py  model_validation.py  orchestrator.py  runtime.py  workspace.py
app/agents/: __init__.py  coder_agent.py  coder_prompts.py  evaluator_agent.py  html_file_tools.py  image_inputs.py  reconstruction_priorities.py  sdk_common.py  skill_file_tools.py
app/config/: agent_registry.yaml  models.yaml  thresholds.yaml
app/instructions/: coder_system.md  evaluator_system.md  shared_rules.md
app/mcp/: __init__.py  custom_tools_server.json  custom_tools_server.py  filesystem_server.json  minimax_server.json  playwright_server.json
app/providers/: __init__.py  codex.py  codex_auth.py  codex_responses.py  openrouter.py  selection.py  settings.py
app/skills/css_layout/: SKILL.md
app/skills/huashu_design/: SKILL.md
app/skills/iconography/: SKILL.md
app/tools/: __init__.py  file_ops.py  image_ops.py  render_screenshot.py  score_parser.py
tests/: test_agent_image_inputs.py  test_asyncio_compat.py  test_html_file_tools.py  test_main_api.py  test_main_cli.py  test_main_logging.py  test_mcp_loader.py  test_model_validation.py  test_openrouter_provider_settings.py  test_orchestrator.py  test_provider_selection.py  test_registry.py  test_render_screenshot.py  test_runtime_cli.py  test_score_parser.py  test_skill_file_tools.py  test_workspace.py
(+5 files in other folders)
