[project]
name = "ibm-hackathon-agent-workflow"
version = "0.1.0"
description = "Modular OpenAI Agents SDK workflow using OpenRouter for image-to-HTML reconstruction."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai-agents>=0.2.0",
  "playwright>=1.48.0",
  "pillow>=10.4.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false

