[project]
name = "agentic-ai-cli"
version = "0.1.0"
description = "Modular OpenAI Agents SDK workflow using OpenRouter for image-to-source-code reconstruction."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "openai-agents>=0.2.0",
  "playwright>=1.48.0",
  "pillow>=10.4.0",
  "pyyaml>=6.0.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
